# echoip.rs

./: .gitignore  Cargo.toml  Justfile  LICENSE  get_geoip.sh  package.json  pnpm-lock.yaml
src/: api.rs  error.rs  geoip_lookup.rs  guard.rs  main.rs  model.rs  templates.rs
static/js/: main.js
