[package]
name = "echoip"
version = "0.2.0"
authors = ["Franco Lucchini <flucchini@gmail.com>"]
edition = "2021"
include = ["/Cargo.toml", "/src/**/*.rs"]
publish = false

[dependencies]
actix-files = "0"
actix-web = "4"
anyhow = "1"
derive_more = "0"
dns-lookup = "1"
env_logger = "0"
log = "0"
maud = "0"
maxminddb = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
