[package]
name = "echoip"
version = "0.2.0"
authors = ["Franco Lucchini <flucchini@gmail.com>"]
edition = "2021"
include = ["/Cargo.toml", "/src/**/*.rs"]
publish = false

[dependencies]
actix-web = "4"
actix-web-rust-embed-responder = "2"
anyhow = "1"
derive_more = "0"
dns-lookup = "1"
env_logger = "0"
log = "0"
maud = "0"
maxminddb = "0"
rust-embed-for-web = "11"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
